Simplify computation of text selection top/bottom.

Leads to a functionality change wherein we will now see
selection highlight overlap in some cases where previously
we avoided it. We've already gone down this path in other
cases, see for example http://crrev.com/1727113007.

This change fixes two issues:

1. A paint invalidation bug that could lead to missing
   glyph bits.

2. A paint issue where text selection rect could be shrunk
   to avoid overlap with preceding line resulting in
   partially invisible glyph portions painted outside of
   the selection rect.

It also removes logic around fiddling selection location,
when floats are present, depending on line offset of
previous/next lines. This could be a relic from selection
gap days. Without problematic specific test cases to
consider, we may as well remove said logic.

BUG=657325

Review-Url: https://codereview.chromium.org/2546473003
Cr-Commit-Position: refs/heads/master@{#436446}

Former-commit-id: e1ac96c0207dd18057fc1f385362b1bee52bb26f